# hornet

./: .clang-tidy  .gitignore  .gitmodule  .gitmodules  CMakeLists.txt  LICENSE  README.md  Syntax.txt  config.inc  doxygen.cfg  sync.ffs_db  sync.ffs_lock
OLD/: BFSTest.cu  BatchUpdate.cuh  BatchUpdate.i.cuh  BinarySearch.i.cuh  ExpandContractKernel.cuh  GraphBase.cpp.old  GraphBase.hpp.old  GraphBase.i.hpp  GraphStd.hpp.old  GraphStdRead.cpp.old  Operator.cuh  Operator.i.cuh  Queue.i.cuh  Queue0.i.cuh  TopDown.cuh  Traverse.cuh  (+8 more)
compiler-util/: .gitignore  CMakeLists.txt  cuda.supp  getDeviceInfo.cu  valgrind.sh
hornet/: CMakeLists.txt
hornet/include/: BasicTypes.hpp  Hornet.hpp
hornet/include/Core/: Hornet.cuh  HornetStatic.cuh
hornet/include/Core/BatchUpdate/: BatchUpdate.cuh  BatchUpdate.i.cuh  BatchUpdateKernels.cuh
hornet/include/Core/Conf/: Common.cuh  EdgeOperations.cuh  HornetConf.cuh  MemoryManagerConf.cuh
hornet/include/Core/DataLayout/: DataLayout.i.cuh
hornet/include/Core/GPUCsr/impl/: Csr.i.cuh
hornet/include/Core/GPUHornet/Batch/: BatchCommon.i.cuh
hornet/include/Core/GPUHornet/impl/: Hornet1.i.cuh  Hornet2.i.cuh  HornetKernels.cuh
hornet/include/Core/HornetDevice/: Edge.cuh  HornetDevice.cuh  Vertex.cuh
hornet/include/Core/HornetDevice/impl/: Edge.i.cuh  HornetDevice.i.cuh  Vertex.i.cuh
hornet/include/Core/HornetInitialize/: HornetInit.cuh  HornetInit.i.cuh  HornetInitialize.i.cuh  HornetStaticInitialize.i.cuh
hornet/include/Core/HornetOperations/: HornetInsert.i.cuh  HornetQuery.i.cuh
hornet/include/Core/MemoryManager/: BitTree.i.hpp  MemoryManager.hpp  MemoryManager.i.hpp
hornet/include/Core/MemoryManager/BlockArray/: BlockArray.cuh  BlockArray.i.cuh
hornet/include/Core/MemoryManager/BlockArray/BitTree/: BitTree.cuh  BitTree.i.cuh
hornet/include/Core/SoA/: SoAData.cuh  SoAPtr.cuh
hornet/include/Core/SoA/impl/: SoAData.i.cuh  SoAPtr.i.cuh
hornet/include/Core/Static/: HornetStatic.cuh  Static.cuh  Static.i.cuh
hornet/include/Util/: BatchFunctions.hpp  CommandLineParam.hpp  RandomGraphData.cuh
hornet/src/Util/: BatchFunctions.cpp  CommandLineParam.cpp
hornet/test/: BinarySearchTest.cu  DataLayout.cu  HornetDeleteTest.cu  HornetInsertTest.cu  HornetInsertTestWeighted.cu  HornetMultiGPUInsertTest.cu  HornetTest.cu  MemBenchmark.cu  MemBenchmark2.cu  MemoryManagement.cu  RMMBenchmark.cu  WeightTest.cu  ptxtest.cu
hornetsnest/: CMakeLists.txt  README.md  history
hornetsnest/docs/: Syntax.txt
hornetsnest/include/: HornetAlg.hpp
hornetsnest/include/Core/: Operator++.cuh
hornetsnest/include/Core/LoadBalancing/: BinarySearch.cuh
hornetsnest/include/Core/Queue/: TwoLevelQueue.cuh  TwoLevelQueue.i.cuh
hornetsnest/include/Static/BUBreadthFirstSearch/: BottomUpBFS.cuh
hornetsnest/include/Static/BetweennessCentrality/: approximate_bc.cuh  bc.cuh
hornetsnest/include/Static/BreadthFirstSearch/: TopDown.cuh  TopDown2.cuh
hornetsnest/include/Static/ClusteringCoefficient/: cc.cuh
hornetsnest/include/Static/ConnectedComponents/: CC.cuh
hornetsnest/include/Static/Dummy/: Dummy.cuh
hornetsnest/include/Static/KCore/: KCore.cuh
hornetsnest/include/Static/KatzCentrality/: Katz.cuh
hornetsnest/include/Static/PageRank/: PageRank.cuh
hornetsnest/include/Static/ShortestPath/: SSSP.cuh
hornetsnest/include/Static/SpMV/: SpMV.cuh
hornetsnest/include/Static/TriangleCounting/: triangle2.cuh
hornetsnest/src/Dynamic/KatzCentrality/: KatzOperators.cuh
hornetsnest/src/Dynamic/PageRank/: PageRankOperators.cuh
hornetsnest/src/Static/BetweennessCentrality/: approximate_bc.cu  bc.cu  bcOperators.cuh
hornetsnest/src/Static/BottomUpBreadthFirstSearch/: BottomUpBFS.cu
hornetsnest/src/Static/BreadthFirstSearch/: TopDown.cu  TopDown2.cu
hornetsnest/src/Static/ClusteringCoefficient/: cc.cu
hornetsnest/src/Static/ConnectedComponents/: CC.cu
hornetsnest/src/Static/Dummy/: Dummy.cu
hornetsnest/src/Static/KCore/: KCore.cu
hornetsnest/src/Static/KTruss/: KTruss.cu  KTrussOperators.cuh
hornetsnest/src/Static/PageRank/: PageRank.cu
hornetsnest/src/Static/ShortestPath/: SSSP.cu
hornetsnest/src/Static/SpMV/: SpMV.cu
hornetsnest/src/Static/TriangleCounting/: triangle.cu
hornetsnest/test/: BCTest.cu  BFSTest.cu  BFSTest2.cu  BUBFSTest2.cu  BrimTest.cu  CCTest.cu  ClusCoeffTest.cu  DummyTest.cu  KCoreTest.cu  KatzDynamicTest.cu  KatzTest.cu  PageRankTest.cu  SSSPTest.cu  SpMVTest.cu  TriangleTest.cu  TriangleTest2.cu
test/DuplicateRemoving/: CMakeLists.txt  HashTable.cu  iterator.cuh  main.cu
test/GraphAnalysis/: CMakeLists.txt  dataset.txt
test/GraphExpTest/: CMakeLists.txt
test/MergePath/: CMakeLists.txt
test/OptimizedFill/: CMakeLists.txt
test/Primitives/: CMakeLists.txt
test/SortByKeys/: CMakeLists.txt
test/Tile/: CMakeLists.txt  main.cu
test/TimerTest/: CMakeLists.txt  prova.cpp  prova.cu
test/WarpReduce/: CMakeLists.txt
util/: .gitignore  Benchmarks.cu  CMakeLists.txt  CodeCheck.txt  MergeIntersection.py  MergeIntersectionTest.py  a.out  code_lines.sh  dev_doxygen.cfg  getDeviceInfo  getDeviceInfo.cu  history.md  history.txt  ignored.txt  nvdisasm_loop.sh  test.sh  uf_graph_dowload.sh  user_doxygen.cfg
xlib/test/: CMakeLists.txt
xlib/test/DataMovement/: CMakeLists.txt  CacheModifiersTest.cu  Copy.cu
xlib/test/DuplicateRemoving/: SortUnique.cu
xlib/test/GraphAnalysis/: main.cpp  script.sh
xlib/test/GraphExpTest/: graph.cpp
xlib/test/HostCpp/: CMakeLists.txt  main.cpp
xlib/test/Iterator/: CMakeLists.txt  Iterator.cu  prova.cu
xlib/test/MatrixTest/: CMakeLists.txt  prova.cpp
xlib/test/MergePath/: main.cu
xlib/test/OptimizedFill/: OptimizedFill.cu  compile.sh  disassembler.sh
xlib/test/Oversize/: Detect.cu
xlib/test/PTX/: PTXtest.cu
xlib/test/PTX2/: PTXtest.cu  a.out  compile.sh
xlib/test/Primitives/: ThreadReduceTest.cu  ThreadScanTest.cu
xlib/test/PrintTest/: CMakeLists.txt
xlib/test/Scheduling/: CMakeLists.txt  Es2.txt  Scheduling.cpp
xlib/test/SortByKeys/: main.cpp
xlib/test/Tile/: copy.cu
xlib/test/TimerTest/: prova.cuh
xlib/test/WarpReduce/: prova.cu
(+1611 files in other folders)
